# opensearch-rust-client-demo

./: Cargo.toml  README.md
src/: main.rs
