[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
opensearch = { features = ["aws-auth"], git = "https://github.com/dblock/opensearch-rs", branch = "opensearch-serverless" }
aws-sigv4 = "0.54.1"
aws-types = "0.54.1"
aws-config = "0.54.1"
url = "2.3.1"
futures = "0.3"
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.16"
